--- a/app/webroot/css/jquery/plugins/sequence/sequence.css
+++ b/app/webroot/css/jquery/plugins/sequence/sequence.css
@@ -16,7 +16,7 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
 /* THEME STYLES */
 .sequence-theme {
   /* this container is just to ensure the background color stretches all the way across on bigger screens */
-  background: #D9D9D9; }
+  background: #eee; }
 
 #sequence {
   margin: 0 auto;
