--- a/app/webroot/css/jquery/plugins/sequence/sequence.css
+++ b/app/webroot/css/jquery/plugins/sequence/sequence.css
@@ -1,44 +1,27 @@
-/*
-Theme created for use with Sequence.js (http://www.sequencejs.com/)
-
-Theme: Modern Slide In
-Version: 1.3
-Theme Author: Ian Lunn @IanLunn
-Author URL: http://www.ianlunn.co.uk/
-Theme URL: http://www.sequencejs.com/themes/modern-slide-in/
-
-This is a FREE theme and is available under a MIT License:
-http://www.opensource.org/licenses/mit-license.php
-
-Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless otherwise stated.
-*/
-/* prefix declarations */
-/* THEME STYLES */
-.sequence-theme {
-  /* this container is just to ensure the background color stretches all the way across on bigger screens */
-  background: #eee; }
-
 #sequence {
+  border: 1px solid black;
+  background: #eee;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
   width: 100%;
   max-width: 1280px;
-  background-color: #eee;
   color: white;
   font-size: 0.625em;
   margin: 0 auto;
   position: relative;
-  height: 268px; }
+  height: 280px;
+    }
   #sequence > .sequence-canvas {
     height: 100%;
     width: 100%; }
     #sequence > .sequence-canvas > li {
       position: absolute;
+      border: 1px solid green;
       width: 100%;
       height: 100%;
       z-index: 1;
-      top: -55%; }
+      top: -50%; }
       #sequence > .sequence-canvas > li img {
         height: 96%; }
     #sequence > .sequence-canvas li > * {
@@ -50,63 +33,96 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
       -o-transition-property: left, opacity;
       transition-property: left, opacity; }
 
-#sequence .next,
-#sequence .prev {
-  color: white;
+.sequence-next,
+.sequence-prev {
+  color: #000;
   cursor: pointer;
   display: none;
+  border: 1px solid black;
   font-weight: bold;
   padding: 10px 15px;
   position: absolute;
   top: 50%;
   z-index: 1000;
   height: 75px;
-  margin-top: -47.5px; }
+  font-size: 30px;
+  line-height: 50px;
+  margin-top: -50px; }
 
-#sequence .sequence-pause {
+.sequence-pause {
   bottom: 0;
   cursor: pointer;
   position: absolute;
   z-index: 1000; }
 
-#sequence .sequence-paused {
+.sequence-paused {
   opacity: 0.3; }
 
-#sequence .prev {
-  left: 3%; }
+.sequence-prev {
+  left: 0%; }
 
-#sequence .next {
-  right: 3%; }
+.sequence-next {
+  right: 0%; }
 
-#sequence .prev img,
-#sequence .next img {
+.sequence-prev img,
+.sequence-next img {
   height: 100%;
   width: auto; }
 
 #sequence-preloader {
   background: #d9d9d9; }
 
-#sequence .next,
-#sequence .prev {
+.sequence-pagination {
+  bottom: 1%;
+  display: none;
+  right: 6%;
   position: absolute;
-  opacity: 0.6;
-  -webkit-transition-duration: 1s;
-  -moz-transition-duration: 1s;
-  -ms-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  transition-duration: 1s; }
+  z-index: 10;
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -ms-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s; }
+  .sequence-pagination li {
+    display: inline-block;
+    *display: inline;
+    /* Hack for IE7 and below as they don't support inline-block */
+    height: 140px; }
+    .sequence-pagination li img {
+      cursor: pointer;
+      opacity: 0.5;
+      -webkit-transition-duration: 1s;
+      -moz-transition-duration: 1s;
+      -ms-transition-duration: 1s;
+      -o-transition-duration: 1s;
+      transition-duration: 1s;
+      -webkit-transition-property: margin-bottom, opacity;
+      -moz-transition-property: margin-bottom, opacity;
+      -ms-transition-property: margin-bottom, opacity;
+      -o-transition-property: margin-bottom, opacity;
+      transition-property: margin-bottom, opacity; }
+    .sequence-pagination li img:hover {
+      margin-bottom: 4px;
+      -webkit-transition-duration: 0.3s;
+      -moz-transition-duration: 0.3s;
+      -ms-transition-duration: 0.3s;
+      -o-transition-duration: 0.3s;
+      transition-duration: 0.3s; }
+  .sequence-pagination li.current img {
+    opacity: 1; }
 
-#sequence .next:hover,
-#sequence .prev:hover {
-  opacity: 1;
-  -webkit-transition-duration: 1s;
-  -moz-transition-duration: 1s;
-  -ms-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  transition-duration: 1s; }
+#sequence h2 {
+  color: white;
+  font-family: 'Sirin Stencil', serif;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+#sequence h3 {
+  font-family: 'Ruluko', serif; }
 
 #sequence .title {
   font-size: 3.4em;
+  border: 1px solid red;
   left: 65%;
   width: 35%;
   opacity: 0;
@@ -131,9 +147,9 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s; }
 
-
 #sequence .subtitle {
   color: black;
+  border: 1px solid red;
   font-size: 2em;
   left: 35%;
   width: 35%;
@@ -161,19 +177,19 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
 #sequence .model {
   left: 30%;
   bottom: -48%;
+  border: 1px solid blue;
   opacity: 0;
   position: relative;
   height: auto !important;
-  max-height: 228px !important;
-  width: 30%;
+  max-height: 280px !important;
+  width: 40%;
   min-width: 225px;
   /* prevents the model from shrinking when the browser is resized */
   max-width: 266px; }
 
 #sequence .animate-in .model {
-  left: 15%;
+  left: 2%;
   opacity: 1;
-  border: 1px solid black;
   -webkit-transition-duration: 1s;
   -moz-transition-duration: 1s;
   -ms-transition-duration: 1s;
@@ -181,7 +197,7 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
   transition-duration: 1s; }
 
 #sequence .animate-out .model {
-  left: 15%;
+  left: 2%;
   opacity: 0;
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
@@ -194,19 +210,19 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
     width: 42%; } }
 @media only screen and (max-width: 838px) {
   #sequence {
-    height: 250px; }
+    height: 280px; }
     #sequence .model {
-      max-height: 330px !important;
+      max-height: 280px !important;
       width: auto; } }
 @media only screen and (max-width: 768px) {
   #sequence {
-    height: 200px; }
+    height: 280px; }
     #sequence .title {
       font-size: 2.8em; }
     #sequence .subtitle {
       font-size: 1.6em; }
-    #sequence .next,
-    #sequence .prev {
+    #sequence .sequence-next,
+    #sequence .sequence-prev {
       height: 60px;
       margin-top: -40px; }
     #sequence .model {
@@ -239,26 +255,31 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
     left: -100%; }
   #sequence .subtitle {
     visibility: hidden; }
- }
+  #sequence .sequence-pagination {
+    bottom: 40px; }
+    #sequence .sequence-pagination li img {
+      height: 100px; } }
 @media only screen and (max-width: 518px) {
   #sequence {
-    height: 250px; } }
+    height: 280px; } }
 @media only screen and (max-width: 468px) {
   #sequence {
-    height: 215px; }
- }
+    height: 280px; }
+    #sequence .sequence-pagination {
+      opacity: 0;
+      visibility: hidden; } }
 @media only screen and (max-width: 418px) {
   #sequence {
-    height: 215px; } }
+    height: 375px; } }
 @media only screen and (max-width: 368px) {
   #sequence {
-    height: 225px; }
+    height: 280px; }
     #sequence .title {
       font-size: 2.2em; } }
 @media only screen and (max-width: 320px) and (orientation: portrait) {
   /*iphone portrait*/
   #sequence {
-    height: 220px; }
+    height: 280px; }
     #sequence .model {
       min-width: 45%;
       width: 45%; }
@@ -268,7 +289,7 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
       margin-left: -22.5%; } }
 @media only screen and (min-width: 321px) and (max-width: 480px) and (orientation: landscape) {
   #sequence {
-    height: 160px; }
+    height: 280px; }
     #sequence .model {
       min-width: 24%;
       width: 24%; }
@@ -278,86 +299,5 @@ Sequence.js and its dependencies are (c) Ian Lunn Design 2012 - 2013 unless othe
     #sequence .animate-out .model {
       left: 17.5%;
       margin-left: 0; }
-}
-
-#sequence-theme .next,
-#sequence-theme .prev {
-  display: block;
-  width: 50px;
-  text-align: center;
-  color: #000000;
-  cursor: pointer;
-  display: none;
-  font-weight: bold;
-  padding: 10px 15px;
-  position: absolute;
-  top: 55%;
-  z-index: 1000;
-  height: 50px;
-  margin-top: -47.5px;
-  vertical-align: middle;
-}
-@media (max-width: 980px) {
-  #sequence-theme .next,
-  #sequence-theme .prev {
-    margin-top: -33.5px;
-    height: 30px;
-    width: 30px;
-  }
-}
-#sequence-theme .next i,
-#sequence-theme .prev i {
-  font-size: 30px;
-  line-height: 50px;
-  margin: 0;
-}
-@media (max-width: 980px) {
-  #sequence-theme .next i,
-  #sequence-theme .prev i {
-    font-size: 20px;
-    line-height: 30px;
-  }
-}
-
-#sequence-theme .prev {
-  left: 0;
-  -webkit-border-top-right-radius: 6px;
-  -webkit-border-bottom-right-radius: 6px;
-  -webkit-border-bottom-left-radius: 0;
-  -webkit-border-top-left-radius: 0;
-  -moz-border-radius-topright: 6px;
-  -moz-border-radius-bottomright: 6px;
-  -moz-border-radius-bottomleft: 0;
-  -moz-border-radius-topleft: 0;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-}
-@media (max-width: 980px) {
-  
-}
-#sequence-theme .next {
-  right: 0;
-  -webkit-border-top-right-radius: 0;
-  -webkit-border-bottom-right-radius: 0;
-  -webkit-border-bottom-left-radius: 6px;
-  -webkit-border-top-left-radius: 6px;
-  -moz-border-radius-topright: 0;
-  -moz-border-radius-bottomright: 0;
-  -moz-border-radius-bottomleft: 6px;
-  -moz-border-radius-topleft: 6px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 6px;
-  border-top-left-radius: 6px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-}
-@media (max-width: 980px) {
-  
-}
+    #sequence .sequence-pagination {
+      right: 17.5%; } }
