--- a/app/webroot/css/jquery/plugins/sequence/sequence.css
+++ b/app/webroot/css/jquery/plugins/sequence/sequence.css
@@ -1,325 +1,366 @@
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-#sequence {
-  border: 0px solid black;
-  background: transparent;
-  margin: 0 auto;
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  max-width: 1280px;
+#sequence-theme {
   color: white;
   font-size: 0.625em;
   margin: 0 auto;
   position: relative;
+  width: 100%;
   height: 333px;
-    }
-  #sequence > .sequence-canvas {
-    height: 100%;
-    width: 100%; }
-    #sequence > .sequence-canvas > li {
-      position: absolute;
-      border: 0px solid green;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      top: -50%; }
-      #sequence > .sequence-canvas > li img {
-        height: 96%; }
-    #sequence > .sequence-canvas li > * {
-      position: absolute;
-      /* only cause the left and opacity properties to transition */
-      -webkit-transition-property: left, opacity;
-      -moz-transition-property: left, opacity;
-      -ms-transition-property: left, opacity;
-      -o-transition-property: left, opacity;
-      transition-property: left, opacity; }
-
-.sequence-next,
-.sequence-prev {
-  color: #000;
+  margin-bottom: 30px;
+  max-width: 1170px;
+  -webkit-backface-visibility: hidden;
+}
+@media (min-width: 1201px) {
+  #sequence-theme {
+    height: 333px;
+  }
+}
+@media (max-width: 1200px) {
+  #sequence-theme {
+    height: 333px;
+  }
+}
+@media (max-width: 980px) {
+  #sequence-theme {
+    height: 333px;
+  }
+}
+@media (max-width: 767px) {
+  #sequence-theme {
+    height: 268px;
+  }
+}
+@media (max-width: 480px) {
+  #sequence-theme {
+    display: none;
+  }
+}
+#sequence-theme #sequence {
+  height: 100%;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  max-width: 1170px;
+  width: 100%;
+  background-color: transparent;
+}
+#sequence-theme #sequence ul {
+  margin: 0;
+}
+#sequence-theme .sequence-next,
+#sequence-theme .sequence-prev {
+  display: block;
+  width: 50px;
+  text-align: center;
+  color: #000000;
   cursor: pointer;
   display: none;
-  border: 0px solid black;
   font-weight: bold;
   padding: 10px 15px;
   position: absolute;
-  top: 50%;
+  top: 55%;
   z-index: 1000;
-  height: 75px;
+  height: 50px;
+  margin-top: -47.5px;
+  vertical-align: middle;
+}
+@media (max-width: 980px) {
+  #sequence-theme .sequence-next,
+  #sequence-theme .sequence-prev {
+    margin-top: -33.5px;
+    height: 30px;
+  }
+}
+#sequence-theme .sequence-next i,
+#sequence-theme .sequence-prev i {
   font-size: 30px;
   line-height: 50px;
-  margin-top: -50px; }
-
-.sequence-pause {
+  margin: 0;
+}
+@media (max-width: 980px) {
+  #sequence-theme .sequence-next i,
+  #sequence-theme .sequence-prev i {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+#sequence-theme .pause {
   bottom: 0;
   cursor: pointer;
   position: absolute;
-  z-index: 1000; }
-
-.sequence-paused {
-  opacity: 0.3; }
-
-.sequence-prev {
-  left: 0%; }
-
-.sequence-next {
-  right: 0%; }
-
-.sequence-prev img,
-.sequence-next img {
+  z-index: 1000;
+}
+#sequence-theme .paused {
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=30);
+  filter: alpha(opacity = 30);
+  opacity: 0.3;
+}
+#sequence-theme .sequence-prev {
+  left: 0;
+  -webkit-border-top-right-radius: 6px;
+  -webkit-border-bottom-right-radius: 6px;
+  -webkit-border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 6px;
+  -moz-border-radius-bottomright: 6px;
+  -moz-border-radius-bottomleft: 0;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+@media (max-width: 980px) {
+  
+}
+#sequence-theme .sequence-next {
+  right: 0;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+  -webkit-border-bottom-left-radius: 6px;
+  -webkit-border-top-left-radius: 6px;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 0;
+  -moz-border-radius-bottomleft: 6px;
+  -moz-border-radius-topleft: 6px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 6px;
+  border-top-left-radius: 6px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+@media (max-width: 980px) {
+  
+}
+#sequence-theme .sequence-prev img,
+#sequence-theme .sequence-next img {
   height: 100%;
-  width: auto; }
-
-#sequence-preloader {
-  background: #d9d9d9; }
-
-.sequence-pagination {
-  bottom: 1%;
+  width: auto;
+}
+#sequence-theme #sequence-preloader {
+  background: #ff470a;
+}
+#sequence-theme .nav {
+  bottom: -22%;
   display: none;
-  right: 6%;
+  right: 40%;
   position: absolute;
-  z-index: 10;
-  -webkit-transition-duration: 0.5s;
+  z-index: 200;
   -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s; }
-  .sequence-pagination li {
-    display: inline-block;
-    *display: inline;
-    /* Hack for IE7 and below as they don't support inline-block */
-    height: 140px; }
-    .sequence-pagination li img {
-      cursor: pointer;
-      opacity: 0.5;
-      -webkit-transition-duration: 1s;
-      -moz-transition-duration: 1s;
-      -ms-transition-duration: 1s;
-      -o-transition-duration: 1s;
-      transition-duration: 1s;
-      -webkit-transition-property: margin-bottom, opacity;
-      -moz-transition-property: margin-bottom, opacity;
-      -ms-transition-property: margin-bottom, opacity;
-      -o-transition-property: margin-bottom, opacity;
-      transition-property: margin-bottom, opacity; }
-    .sequence-pagination li img:hover {
-      margin-bottom: 4px;
-      -webkit-transition-duration: 0.3s;
-      -moz-transition-duration: 0.3s;
-      -ms-transition-duration: 0.3s;
-      -o-transition-duration: 0.3s;
-      transition-duration: 0.3s; }
-  .sequence-pagination li.current img {
-    opacity: 1; }
-
-#sequence h2 {
-  color: white;
-  font-family: 'Sirin Stencil', serif;
-  font-weight: bold;
-  text-transform: uppercase; }
-
-#sequence h3 {
-  font-family: 'Ruluko', serif; }
-
-#sequence .title {
-  font-size: 3.4em;
-  border: 0px solid red;
-  left: 65%;
-  width: 45%;
-  opacity: 0;
-  bottom: 1%;
-  z-index: 50; }
-
-#sequence .animate-in .title {
-  left: 40%;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+#sequence-theme .nav li {
+  display: inline-block;
+  height: 140px;
+}
+#sequence-theme .nav li {
+  *display: inline;
+  /* Hack for IE7 and below as they don't support inline-block */
+}
+#sequence-theme .nav li img {
+  cursor: pointer;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
+  filter: alpha(opacity = 50);
+  opacity: 0.5;
+  -moz-transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+#sequence-theme .nav li img.active {
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity = 100);
   opacity: 1;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s; }
-
-#sequence .animate-out .title {
-  left: 45%;
-  opacity: 0;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s; }
-
-#sequence .subtitle {
-  color: black;
-  border: 0px solid red;
-  font-size: 2em;
-  left: 65%;
-  width: 45%;
-  opacity: 0;
-  top: 101%; }
-
-#sequence .animate-in .subtitle {
-  left: 40%;
-  opacity: 1;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s; }
-
-#sequence .animate-out .subtitle {
-  left: 45%;
-  opacity: 0;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s; }
-
-#sequence .model {
-  left: 30%;
-  bottom: -39%;
-  border: 0px solid blue;
-  opacity: 0;
-  position: relative;
-  height: auto !important;
-  max-height: 310px !important;
-  /* prevents the model from shrinking when the browser is resized */
-  max-width: 266px; }
-
-#sequence .animate-in .model {
-  left: 7%;
-  opacity: 1;
-  -webkit-transition-duration: 1s;
+}
+#sequence-theme #sequence li {
+  height: 100%;
+  position: absolute;
+  top: -50%;
+  width: 100%;
+}
+#sequence-theme #sequence li > * {
+  position: absolute;
+}
+#sequence-theme .sequence-next,
+#sequence-theme .sequence-prev {
+  position: absolute;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=60);
+  filter: alpha(opacity = 60);
+  opacity: 0.6;
   -moz-transition-duration: 1s;
-  -ms-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  transition-duration: 1s; }
-
-#sequence .animate-out .model {
-  left: 4%;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+}
+#sequence-theme .sequence-next:hover,
+#sequence-theme .sequence-prev:hover {
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity = 100);
+  opacity: 1;
+  -moz-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+}
+/* MAIN TITLES ********************************************************************************************************/
+/* IMAGES *//**********************************************************************************************************/
+#sequence-theme .image {
+  right: 50%;
+  bottom: -36%;
   opacity: 0;
-  -webkit-transition-duration: 0.5s;
+  border: 0px solid black;
+  z-index: 999;
+  position: absolute;
+  height: auto !important;
+}
+@media (min-width: 1200px) {
+  #sequence-theme .image {
+    bottom: -36%;
+  }
+}
+@media (min-width: 768px) and (max-width: 979px) {
+  #sequence-theme .image {
+    bottom: -38%;
+  }
+}
+@media (max-width: 767px) {
+  #sequence-theme .image {
+    bottom: -46%;
+  }
+}
+#sequence-theme .animate-in .image {
+  right: 10%;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity = 100);
+  opacity: 1;
+  -moz-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+}
+#sequence-theme .animate-out .image {
+  right: 0%;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  filter: alpha(opacity = 0);
+  opacity: 0;
   -moz-transition-duration: 0.5s;
-  -ms-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s; }
-
-@media only screen and (min-width: 992px) {
-  #sequence .title {
-    width: 42%; } }
-@media only screen and (max-width: 838px) {
-  #sequence {
-    height: 333px; }
-    #sequence .model {
-      max-height: 310px !important;
-      width: auto; } }
-@media only screen and (max-width: 768px) {
-  #sequence {
-    height: 333px; }
-    #sequence .title {
-      font-size: 2.8em;
-      width: 42%; }
-  #sequence .animate-in .title {
-    left: 43%; }
-  #sequence .animate-out .title {
-    left: 43%; }      
-    #sequence .subtitle {
-      font-size: 1.6em; }
-  #sequence .animate-in .subtitle {
-    left: 43%; }
-  #sequence .animate-out .subtitle {
-    left: 43%; }      
-    #sequence .sequence-next,
-    #sequence .sequence-prev {
-      height: 60px;
-      margin-top: -40px; }
-    #sequence .model {
-      max-height: 310px !important;
-      width: auto; } }
-@media only screen and (max-width: 568px) {
-  #sequence .model {
-    left: 50%;
- }
-  #sequence .animate-in .model {
-    left: 50%;
-    margin-left: -20%; }
-  #sequence .animate-out .model {
-    left: 50%;
-    margin-left: -20%; }
-  #sequence .title {
-    background: #a1a1a1;
-    background: rgba(0, 0, 0, 0.3);
-    bottom: 0;
-    left: 100%;
-    padding: 4%;
-    bottom: -50%;
-    width: 100%;
-    z-index: 10; }
-  #sequence .animate-in .title {
-    left: 0%; }
-  #sequence .animate-out .title {
-    left: -100%; }
-  #sequence .subtitle {
-    visibility: hidden; }
-  #sequence .sequence-pagination {
-    bottom: 40px; }
-  #sequence .animate-in .title {
-    left: 30%; }
-  #sequence .animate-out .title {
-    left: 30%; }      
-    #sequence .subtitle {
-      font-size: 1.6em; }
-  #sequence .animate-in .subtitle {
-    left: 30%; }
-  #sequence .animate-out .subtitle {
-    left: 30%; }      
-    #sequence .sequence-pagination li img {
-      height: 100px; } }
-@media only screen and (max-width: 518px) {
-  #sequence {
-    height: 333px; } }
-@media only screen and (max-width: 468px) {
-  #sequence {
-    height: 333px; }
-    #sequence .sequence-pagination {
-      opacity: 0;
-      visibility: hidden; } }
-@media only screen and (max-width: 418px) {
-  #sequence {
-    height: 375px; } }
-@media only screen and (max-width: 368px) {
-  #sequence {
-    height: 333px; }
-    #sequence .title {
-      font-size: 2.2em; } }
-@media only screen and (max-width: 320px) and (orientation: portrait) {
-  /*iphone portrait*/
-  #sequence {
-    height: 333px; }
-    #sequence .model {
-      min-width: 45%;
-      width: 45%; }
-    #sequence .animate-in .model {
-      margin-left: -22.5%; }
-    #sequence .animate-out .model {
-      margin-left: -22.5%; } }
-
-
-@media (max-width: 480px) {
-  #sequence-theme {
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+#sequence-theme .text {
+  left: 50%;
+  bottom: -38%;
+  opacity: 0;
+  z-index: 1;
+  margin-left: -10%;
+  border: 0px solid black;
+  position: absolute;
+  height: auto !important;
+  width: 55%;
+  padding: 20px;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+@media (min-width: 1200px) {
+  #sequence-theme .text {
+    bottom: -38%;
+  }
+}
+@media (min-width: 768px) and (max-width: 979px) {
+  #sequence-theme .text {
+    bottom: -36%;
+  }
+}
+@media (max-width: 767px) {
+  #sequence-theme .text {
+    bottom: -34%;
+  }
+}
+#sequence-theme .animate-in .text {
+  left: 10%;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity = 100);
+  opacity: 1;
+  -moz-transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+  -webkit-transition-delay: 0.5s;
+  -moz-transition-delay: 0.5s;
+  -o-transition-delay: 0.5s;
+  -ms-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+}
+#sequence-theme .animate-out .text {
+  left: 0%;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  filter: alpha(opacity = 0);
+  opacity: 0;
+  -moz-transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+#sequence-theme .text .title {
+  color: #ff6633;
+  font-size: 24px;
+  line-height: 24px;
+}
+@media (min-width: 1200px) {
+  #sequence-theme .text .title {
+    font-size: 30px;
+    line-height: 30px;
+  }
+}
+@media (min-width: 768px) and (max-width: 979px) {
+  
+}
+@media (max-width: 767px) {
+  
+}
+#sequence-theme .text .title span {
+  text-transform: uppercase;
+  font-weight: bold;
+  display: inline-block;
+}
+#sequence-theme .text .subtitle {
+  color: #333333;
+  font-size: 14px;
+  line-height: 16px;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+@media (min-width: 1200px) {
+  #sequence-theme .text .subtitle {
+    font-size: 16px;
+    line-height: 16px;
+  }
+}
+@media (min-width: 768px) and (max-width: 979px) {
+  
+}
+@media (max-width: 767px) {
+  #sequence-theme .text .subtitle {
+    display: none;
+  }
+}
+#sequence-theme .text .subtitle span {
+  text-transform: uppercase;
+  font-weight: bold;
+  display: inline-block;
+}
+#sequence-theme .description {
+  font-size: 16px;
+  line-height: 20px;
+  color: #555555;
+}
+@media (max-width: 979px) {
+  #sequence-theme .description {
     display: none;
   }
 }
