Корректировка стилей слайдера

--- a/app/webroot/css/jquery/plugins/sequence/sequence.css
+++ b/app/webroot/css/jquery/plugins/sequence/sequence.css
@@ -49,6 +49,10 @@
 #sequence-theme .sequence-next,
 #sequence-theme .sequence-prev {
   display: block;
+}
+#sequence-theme .sequence-next,
+#sequence-theme .sequence-prev {
+  display: block;
   width: 50px;
   text-align: center;
   color: #000000;
