--- a/app/webroot/css/jquery/plugins/sequence/sequence.css
+++ b/app/webroot/css/jquery/plugins/sequence/sequence.css
@@ -31,7 +31,7 @@
 }
 @media (max-width: 480px) {
   #sequence-theme {
-    display: none;
+    height: 268px;
   }
 }
 #sequence-theme #sequence {
@@ -57,7 +57,6 @@
   text-align: center;
   color: #000000;
   cursor: pointer;
-  display: none;
   font-weight: bold;
   padding: 10px 15px;
   position: absolute;
@@ -150,7 +149,6 @@
 }
 #sequence-theme .nav {
   bottom: -22%;
-  display: none;
   right: 40%;
   position: absolute;
   z-index: 200;
@@ -214,7 +212,7 @@
   right: 50%;
   bottom: -36%;
   opacity: 0;
-  border: 0px solid black;
+  border: 0px solid red;
   z-index: 999;
   position: absolute;
   height: auto !important;
@@ -282,6 +280,10 @@
 @media (max-width: 767px) {
   #sequence-theme .text {
     bottom: -34%;
+  }
+}
+@media (max-width: 480px) {
+  #sequence-theme .text {
   }
 }
 #sequence-theme .animate-in .text {
