--- a/app/webroot/css/jquery/plugins/sequence/sequence-left.css
+++ b/app/webroot/css/jquery/plugins/sequence/sequence-left.css
@@ -233,7 +233,7 @@
   }
 }
 #sequence-theme .animate-in .image {
-  right: 10%;
+  left: 10%;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
   filter: alpha(opacity = 100);
   opacity: 1;
@@ -242,7 +242,7 @@
   transition-duration: 1s;
 }
 #sequence-theme .animate-out .image {
-  right: 0%;
+  left: 5%;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
   filter: alpha(opacity = 0);
   opacity: 0;
